subprojects/swen430/src/test/resources/com/hjwylde/uni/swen430/assignment01/tests/valid/ListAppend_Valid_4.while
void main() {
    [int] l = [1,2,3];
    [real] r = [4.23,5.5];
    [int|real] x = r ++ l;
    print x;
}
