subprojects/swen430/src/test/resources/com/hjwylde/uni/swen430/assignment01/tests/invalid/DefiniteAssign_Invalid_14.while
int f(int x) {
    [[int]] rs;
    rs[0][0] = 1;
    return |rs|;
}
